--- a/CHE9000WAP/Resources/Layout/Flash.axml
+++ b/CHE9000WAP/Resources/Layout/Flash.axml
@@ -10,4 +10,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/Flash_ImgEnter" />
+    <TextView
+        android:text="che9000"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView1"
+        android:gravity="center" />
 </LinearLayout>
