--- a/CHE9000WAP/Resources/Layout/Login.axml
+++ b/CHE9000WAP/Resources/Layout/Login.axml
@@ -3,90 +3,167 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
-    <TextView
-        android:id="@+id/Login_EXIT"
-        android:text="退出"
-        android:textStyle="bold"
-        android:textColor="#C0B000"
-        android:gravity="right"
-        android:padding="5dip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:text="请输入登录手机号"
+    android:background="@color/white">
+    <TableLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/Login_USERNAME"
-        android:layout_width="fill_parent"
-        android:textColorHint="#AAAAAA"
-        android:layout_weight="1"
-        android:layout_height="36dp"
-        android:padding="5dip"
-        android:layout_margin="5dp"
-        android:textSize="15dip"
-        android:singleLine="true"
-        android:hint="请输入" />
-    <TextView
-        android:text="请输入登录密码"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/Login_USERPASS"
-        android:layout_width="fill_parent"
-        android:textColorHint="#AAAAAA"
-        android:layout_weight="1"
-        android:layout_height="36dp"
-        android:padding="5dip"
-        android:layout_margin="5dp"
-        android:textSize="15dip"
-        android:singleLine="true"
-        android:inputType="textPassword"
-        android:hint="请输入密码" />
-    <Button
-        android:id="@+id/Login_USERLOGIN"
-        android:text="登  录 "
-        android:paddingTop="3dip"
-        android:paddingBottom="3dip"
-        android:paddingLeft="80dip"
-        android:paddingRight="80dip"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
-    <TextView
-        android:id="@+id/Login_REGUSER"
-        android:text="注册"
-        android:textStyle="bold"
-        android:textColor="#C0B000"
-        android:gravity="right"
-        android:padding="5dip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/Login_GETPASS"
-        android:text="忘记密码"
-        android:textStyle="bold"
-        android:textColor="#C0B000"
-        android:gravity="right"
-        android:padding="5dip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <RadioGroup
-        android:minWidth="25px"
-        android:minHeight="25px"
+        android:stretchColumns="1">
+    <!-- top bar -->
+        <TableRow
+            android:id="@+id/top_bar"
+            android:gravity="center_vertical"
+            android:background="@drawable/orange">
+            <Button
+                android:text="返回"
+                android:id="@+id/Login_EXIT"
+                android:textSize="16sp"
+                android:layout_margin="3dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_button" />
+            <TextView
+                android:id="@+id/top_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CHE9000"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textColor="@color/white" />
+            <Button
+                android:id="@+id/Login_userinfo"
+                android:textSize="16sp"
+                android:layout_margin="3dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_button"
+                android:drawableLeft="@drawable/icon_menu" />
+        </TableRow>
+    </TableLayout>
+<!-- content -->
+    <TableLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="普通用户跳过登录"
-            android:id="@+id/Login_REGTYPECLIENT" />
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="专业用户跳过登录"
-            android:id="@+id/Login_REGTYPESERVE" />
-    </RadioGroup>
+        android:layout_height="wrap_content"
+        android:stretchColumns="1">
+        <TableRow
+            android:gravity="center_horizontal">
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_logo"
+                android:padding="10dp"
+                android:layout_marginTop="40dp" />
+        </TableRow>
+        <TableRow
+            android:gravity="center_horizontal">
+            <TextView
+                android:id="@+id/top_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CHE9000战略合作伙伴平台"
+                android:textSize="20sp"
+                android:textColor="@android:color/background_dark"
+                android:gravity="center_horizontal" />
+        </TableRow>
+        <TableRow
+            android:gravity="center_horizontal"
+            android:paddingTop="30dip">
+            <EditText
+                android:id="@+id/Login_USERNAME"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:layout_height="36dp"
+                android:background="@drawable/bg_edittext"
+                android:padding="5dip"
+                android:layout_margin="10dp"
+                android:textColorHint="#AAAAAA"
+                android:textSize="15dip"
+                android:textColor="@android:color/black"
+                android:singleLine="true"
+                android:hint="请输入账号" />
+        </TableRow>
+        <TableRow
+            android:gravity="center_horizontal">
+            <EditText
+                android:id="@+id/Login_USERPASS"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:layout_height="36dp"
+                android:background="@drawable/bg_edittext"
+                android:padding="5dip"
+                android:layout_margin="10dp"
+                android:textColorHint="#AAAAAA"
+                android:textSize="15dip"
+                android:textColor="@android:color/black"
+                android:singleLine="true"
+                android:inputType="textPassword"
+                android:hint="请输入密码" />
+        </TableRow>
+        <TableRow
+            android:gravity="center"
+            android:paddingTop="20dip">
+            <Button
+                android:id="@+id/Login_USERLOGIN"
+                android:text="登        录"
+                android:paddingLeft="80dip"
+                android:paddingRight="80dip"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/orange"
+                android:textColor="@drawable/white"
+                android:minWidth="200dp"
+                android:minHeight="50dp" />
+        </TableRow>
+        <TableRow
+            android:gravity="center"
+            android:paddingTop="10dip">
+            <Button
+                android:id="@+id/Login_REGUSER"
+                android:text="用户注册"
+                android:paddingLeft="80dip"
+                android:paddingRight="80dip"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/lightred"
+                android:textColor="@drawable/white"
+                android:minWidth="200dp"
+                android:minHeight="50dp" />
+        </TableRow>
+        <TableRow
+            android:gravity="center"
+            android:paddingTop="10dip">
+            <Button
+                android:id="@+id/Login_GETPASS"
+                android:text="找回密码"
+                android:paddingLeft="80dip"
+                android:paddingRight="80dip"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/bluetgray"
+                android:textColor="@drawable/white"
+                android:minWidth="200dp"
+                android:minHeight="50dp" />
+        </TableRow>
+        <TableRow
+            android:gravity="center"
+            android:paddingTop="10dip">
+            <RadioGroup
+                android:id="@+id/Login_RadioGroup"
+                android:minWidth="25px"
+                android:minHeight="25px"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="普通用户跳过登录"
+                    android:id="@+id/Login_REGTYPECLIENT" />
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="专业用户跳过登录"
+                    android:id="@+id/Login_REGTYPESERVE" />
+            </RadioGroup>
+        </TableRow>
+    </TableLayout>
 </LinearLayout>
