--- a/CHE9000WAP/Resources/Layout/Login.axml
+++ b/CHE9000WAP/Resources/Layout/Login.axml
@@ -36,7 +36,7 @@
                 android:layout_margin="3dp"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_content"
                 android:background="@drawable/shape_button"
                 android:drawableLeft="@drawable/icon_menu" />
         </TableRow>
