--- a/CHE9000WAP/Resources/Layout/Flash.axml
+++ b/CHE9000WAP/Resources/Layout/Flash.axml
@@ -3,8 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
+    android:background="@color/white">
     <ImageView
         android:src="@drawable/Icon"
         android:layout_width="fill_parent"
