--- a/CHE9000WAP/Resources/Layout/Flash.axml
+++ b/CHE9000WAP/Resources/Layout/Flash.axml
@@ -16,5 +16,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView1"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textColor="@color/black" />
 </LinearLayout>
