--- a/CHE9000WAP/Resources/Layout/LoginPass.axml
+++ b/CHE9000WAP/Resources/Layout/LoginPass.axml
@@ -4,13 +4,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/white">
+<!-- top bar -->
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:stretchColumns="1">
-    <!-- top bar -->
         <TableRow
-            android:id="@+id/top_bar"
             android:gravity="center_vertical"
             android:background="@color/orange">
             <Button
@@ -26,12 +25,13 @@
                 android:id="@+id/top_text"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:text="CHE9000"
+                android:text="找回密码"
                 android:textSize="20sp"
                 android:gravity="center_vertical"
                 android:textColor="@color/white" />
         </TableRow>
     </TableLayout>
+<!-- content -->
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -74,7 +74,7 @@
                 android:layout_width="fill_parent"
                 android:textColorHint="#AAAAAA"
                 android:layout_weight="1"
-                android:layout_height="36dp"
+                android:layout_height="50dp"
                 android:padding="5dip"
                 android:layout_margin="5dp"
                 android:textSize="15dip"
@@ -89,7 +89,7 @@
                 android:layout_width="fill_parent"
                 android:textColorHint="#AAAAAA"
                 android:layout_weight="1"
-                android:layout_height="36dp"
+                android:layout_height="50dp"
                 android:padding="5dip"
                 android:layout_margin="5dp"
                 android:textSize="15dip"
@@ -104,7 +104,7 @@
                 android:layout_width="fill_parent"
                 android:textColorHint="#AAAAAA"
                 android:layout_weight="1"
-                android:layout_height="36dp"
+                android:layout_height="50dp"
                 android:padding="5dip"
                 android:layout_margin="5dp"
                 android:textSize="15dip"
