--- a/CHE9000WAP/Resources/Layout/LoginRegArea.axml
+++ b/CHE9000WAP/Resources/Layout/LoginRegArea.axml
@@ -2,33 +2,63 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <TextView
-        android:id="@+id/LoginRegArea_Back"
-        android:text="返回"
-        android:textStyle="bold"
-        android:textColor="#C0B000"
-        android:gravity="right"
-        android:padding="5dip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/LoginRegArea_Next"
-        android:text="下一步"
-        android:textStyle="bold"
-        android:textColor="#C0B000"
-        android:gravity="right"
-        android:padding="5dip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    android:layout_height="fill_parent"
+    android:background="@color/white">
+<!-- top bar -->
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:stretchColumns="1">
+        <TableRow
+            android:id="@+id/top_bar"
+            android:gravity="center_vertical"
+            android:background="@color/orange">
+            <Button
+                android:text="返回"
+                android:id="@+id/LoginRegArea_Back"
+                android:textSize="16sp"
+                android:layout_margin="3dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:background="@drawable/shape_button" />
+            <TextView
+                android:id="@+id/top_text"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:text="鉴定区域"
+                android:textSize="20sp"
+                android:gravity="center_vertical"
+                android:textColor="@color/white" />
+            <Button
+                android:text="下一步"
+                android:id="@+id/LoginRegArea_Next"
+                android:textSize="16sp"
+                android:layout_margin="3dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:background="@drawable/shape_button" />
+        </TableRow>
+    </TableLayout>
+<!-- content -->
     <TextView
         android:text="请设置受理鉴定的区域范围"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/LoginRegArea_TITLE" />
+        android:id="@+id/LoginRegArea_TITLE"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/shape_black"
+        android:textColor="@color/black" />
     <CheckBox
         android:text="CheckBox"
+        android:background="@drawable/shape_black"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/LoginRegArea_USERCHECK" />
+        android:id="@+id/LoginRegArea_USERCHECK"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp" />
 </LinearLayout>
